--- a/css/product.css
+++ b/css/product.css
@@ -94,6 +94,14 @@ table {
 	background-position: bottom;
 	background-size: cover;
 }
+
+p{
+	font-size: 16px;
+	text-decoration: none;
+}
+p{
+	font-size: 16px;
+}
 /*トップ*/
 .top{
 	background-image:url(../image/pro_inai02.png);
@@ -121,7 +129,7 @@ table {
 	padding-top:15px;
 }
 .back{
-	width:43px;
+	width:80px;
 }
 /*ボディー*/
 .main{
@@ -131,7 +139,7 @@ table {
 	text-align: center;
 	letter-spacing: 3px;
 	line-height: 30px;
-	padding: 33px 0px 5px 0px;
+	padding: 33px 0px 30px 0px;
 }
 .mainText p{
 	padding: 11px 0px;
@@ -159,19 +167,14 @@ table {
 	padding-right: 3px;
 }
 .ex h4{
-	font-size: 25px;
+	font-size: 20px;
 	padding: 45px 0px 10px 0px;
 	margin: 10px 0px;
 	line-height: 20px;
 	letter-spacing: 3px;
 	border-bottom: solid 2px;
 }
-.ex p{
-	font-size: 18px;
-	line-height: 23px;
-	letter-spacing: 2px;
-	padding: 0px 0px 4px 10px;
-}
+
 
 
 
@@ -212,6 +215,82 @@ footer{
 	padding: 30px 0px 5px 0px;
 }
 .back2 {
-	width: 43px;
-	padding: 40px 0px;
+	width: 80px;
+	padding: 40px 0px 50px 0px;
+}
+
+/*プロダクト一覧*/
+
+/*ニュース一覧*/
+.ex_year{
+	font-size: 24px;
+	padding: 40px 0px 15px 0px;
+}
+
+.news {
+	background-image: url(../image/back01.png);
+	background-size: cover;
+
+}
+
+ .frame .newsframes{
+	 width: 70%;
+	 margin: 50px auto 20px auto;
+   /*height: 300px;*/
+   /*background-color: rgba(0, 0, 255, 0.2);*/
+
+ }
+.news i{
+  font-size: 35px;
+  padding-left:15px;
+}
+.news p{
+  font-size:17px;
+}
+.date{
+  padding:0 3px;
+  position: relative;
+  bottom: 5px;
+}
+
+.title{
+  position: relative;
+  bottom: 5px;
+	text-decoration: none;
+}
+
+.newsframe{
+  padding:6px 0;
+  margin-bottom:8px;
+  border-radius: 10px;
+  letter-spacing: 2px;
+  display:inline-block;
+  width:100%;
+}
+.newsCont{
+color: black;
+text-decoration: none;
+}
+.newsCont:hover{
+  color: black;
+}
+.newsCont:active{
+  color: black;
+}
+.news1{
+  background-color:#7bc2ce;
+}
+.news2{
+  background-color:#7bc2ce;
+}
+.news3{
+  background-color:#eeefef;
+}
+.newsCont{
+  display:inline-block;
+}
+
+.news_icon{
+	height: 33px;
+	padding: 0px 0px 0px 19px;
 }
