--- a/css/topstyle.css
+++ b/css/topstyle.css
@@ -49,6 +49,11 @@ table {
 }
 
 
+a {
+	text-decoration: none;
+}
+
+
  /*common*/
  .frame{
    width:80%;
@@ -71,6 +76,7 @@ table {
  .whiteNon:active{
    color: white;
  }
+
  .blackNon{
    color: black;
  }
@@ -84,81 +90,118 @@ table {
 
 .more {
 	display: inline-block;
-	width:40px;
+	width:100px;
 	float: right;
 	margin-bottom: 20px;
 }
+.contents{
+	background-image:url(../image/back05.png);
+	background-position: bottom;
+	background-size: cover;
+}
 
-
+p{
+	font-size: 16px;
+	text-decoration: none;
+}
+p{
+	font-size: 16px;
+}
+.ProductPic{
+	width:50%;
+	display: block;
+	margin: 0 auto;
+	padding-top: 80px;
+}
  /*トップ*/
- .top{
-   background-color: blue;
-   background-image:url(../image/eye_back01.png);
-   background-size: cover;
+#top{
+   /*background-color: blue;*/
+   /*background-image:url(../image/eye_back01.png);*/
+   /*background-size: cover;*/
    text-align: center;
+	 width: 100%;
+   position: relative;
+	 overflow: hidden;
+	 background: url('../image/movie_cover04.png') repeat;
+	 background-size: 23px;
  }
- .copy{
+#top video {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+width: 100%;
+  min-height: 100%;
+
+  background-size: cover;
+  z-index: -1;
+}
+
+
+#top .copy{
    padding-top: 270px;
- }
- .top h1{
+}
+
+#top h1{
    color: white;
    font-size: 22px;
    text-align: center;
    line-height: 29px;
    letter-spacing: 5px;
- }
- .logo{
+}
+
+#top .logo{
   width: 300px;
   margin-top: 30px;
- }
- .tw_katakoto{
-	 width:280px;
+}
+#top .tw_katakoto{
+	 width:250px;
 	 padding-bottom: : 10px;
- }
- .top p{
-	 font-size: 18px;
-	 padding-top: 200px ;
-	 color: white;
- }
+}
 
-
+#top p{
+	color: white;
+	font-size: 18px;
+	padding-top: 200px ;
+}
 
  /*ニュース*/
-.news {
+#news {
 	background-image: url(../image/back01.png);
 	background-size: cover;
+	background-attachment: fixed;
 
 }
 
- .frame .newsframes{
+#news .frame .newsframes{
 	 width: 70%;
 	 margin: 50px auto 20px auto;
    /*height: 300px;*/
    /*background-color: rgba(0, 0, 255, 0.2);*/
 
  }
-.news i{
+#news i{
   font-size: 35px;
   padding-left:15px;
 }
-.news p{
-  font-size:17;
+#news p{
+  font-size:17px;
 }
-.date{
-  padding:0 10px;
+#news .date{
+  padding:0 3px;
   position: relative;
   bottom: 5px;
 }
 
-.title{
+#news .title{
   position: relative;
   bottom: 5px;
 	text-decoration: none;
 }
 
 .newsframe{
-  padding:10px 0;
-  margin-bottom:15px;
+  padding:6px 0;
+  margin-bottom:8px;
   border-radius: 10px;
   letter-spacing: 2px;
   display:inline-block;
@@ -186,12 +229,17 @@ color: black;
   display:inline-block;
 }
 
+.news_icon{
+	height: 33px;
+	padding: 0px 0px 0px 19px;
+}
 
  /*コンテンツ*/
 .contents{
   /*background-color: rgba(0, 0, 255, 0.2);*/
   background-image: url(../image/back02.png);
   background-size: cover;
+	background-attachment: fixed;
 
 }
 .tiles{
@@ -225,7 +273,7 @@ color: black;
   font-size: 20px;
   text-decoration: none;
   color: black;
-  padding:30px 0px 50px 0px;
+  padding:30px 0px 30px 0px;
   display: inline-block;
   letter-spacing: 2px;
 }
@@ -286,17 +334,18 @@ margin: 0 20px;
  }
  .aboutLink{
 	 text-align: center;
-	 margin: 10px auto;
+	 margin: 10px auto 0px auto;
 	 padding-bottom: 25px;
  }
  /*コンタクト*/
  .contact{
 	 background-image: url(../image/back03.png);
 	 background-size: cover;
+	 background-attachment: fixed;
  }
 .contact h3{
 	text-align: center;
-	margin-top: 45px;
+	padding-top: 45px;
 	font-size: 25px;
 	letter-spacing: 10px;
 }
@@ -323,7 +372,7 @@ line-height: 22px;
 	 background-color: #eeefef;
 	 border-color: black;
 	 border-width: 0px;
-	 font-size: 20px;
+	 font-size: 16px;
 	 letter-spacing: 3px;
 	 border-radius: 10px;
 	 font-family: 'M PLUS Rounded 1c', sans-serif;
@@ -372,7 +421,180 @@ footer{
 }
 .footLogo .logo{
 	width:13%;
+	margin-top: 30px;
 }
- /*プロダクトページ*/
+.footer .frame{
+	width:80%;
+}
 
- /*ニュースページ*/
+/*プライバシーポリシー*/
+#privacy{
+	background-image:url(../image/back05.png);
+	background-position: bottom;
+	background-size: cover;
+	background-attachment: fixed;
+	padding: 30px 0px 5px 0px;
+}
+#privacy .back2 {
+	width: 80px;
+	padding: 40px 0px 50px 0px;
+}
+
+#privacy h4{
+	font-size: 20px;
+	padding: 45px 0px 10px 0px;
+	margin: 10px 0px;
+	line-height: 20px;
+	letter-spacing: 3px;
+	border-bottom: solid 2px;
+}
+
+#privacy p{
+	font-size: 16px;
+	padding-bottom: 5px;
+}
+#privacy .dot{
+		width: 18px;
+		padding-right: 3px;
+}
+
+
+
+/*ニュース一覧*/
+
+#exlist .back2 {
+	width: 80px;
+	padding: 40px 0px 50px 0px;
+}
+#exlist .ex_year{
+	font-size: 24px;
+	padding: 40px 0px 15px 0px;
+}
+
+#exlist .news {
+	background-image: url(../image/back01.png);
+	background-size: cover;
+	background-attachment: fixed;
+}
+#exlist .frame{
+	width:60%;
+}
+#exlist .date{
+  padding:0 3px;
+  position: relative;
+  bottom: 5px;
+}
+
+#exlist .title{
+  position: relative;
+  bottom: 5px;
+	text-decoration: none;
+}
+
+/*コンテンツ*/
+/*トップ*/
+.top{
+	background-image:url(../image/pro_inai02.png);
+	background-position: bottom;
+	background-size: cover;
+	color: white;
+}
+.topBlock{
+	padding: 40px;
+}
+.top h1{
+	font-size: 35px;
+	padding-top: 140px;
+	padding-bottom: 100px;
+	letter-spacing: 4px;
+}
+.top .proLogo{
+	display: block;
+	width:430px;
+	padding-top: 140px;
+	padding-bottom: 100px;
+}
+.top h2{
+	font-size: 18px;
+	padding-top:15px;
+}
+.back{
+	width:80px;
+}
+/*ボディー*/
+#product .frame{
+	width:70%;
+}
+
+#product .mainText{
+	text-align: center;
+	letter-spacing: 3px;
+	line-height: 30px;
+	padding: 33px 0px 30px 0px;
+}
+#product .mainText p{
+	padding: 11px 0px;
+}
+#product .movie{
+	border-radius: 13px;
+	width:100%;
+	height: 500px;
+	margin: 0 auto;
+	display: block;
+}
+#product .proImage{
+	width: 100%;
+	margin-top: 28px;
+	border-radius: 13px;
+}
+#product .content02{
+	font-size: 100px;
+	margin-top: 20px;
+	/*background-color: #43adc5;*/
+}
+#product h4{
+	font-size: 20px;
+	padding: 45px 0px 10px 0px;
+	margin: 10px 0px;
+	line-height: 20px;
+	letter-spacing: 3px;
+	border-bottom: solid 2px;
+}
+#product .ex p{
+	font-size: 16px;
+	padding-bottom: 7px;
+}
+
+#product .dot{
+		width: 18px;
+		padding-right: 3px;
+}
+
+/*プロダクト一覧*/
+#product_list .type{
+	font-size: 24px;
+	padding: 40px 0px 15px 0px;
+}
+
+/*
+#product_list{
+	background-image: url(../image/back01.png);
+	background-size: cover;
+	background-attachment: fixed;
+}
+*/
+#product_list .frame{
+}
+
+#product_list .back2 {
+	width: 80px;
+	padding: 40px 0px 50px 0px;
+}
+.content .title{
+  font-size: 20px;
+  text-decoration: none;
+  color: black;
+  padding:30px 0px 30px 0px;
+  display: inline-block;
+  letter-spacing: 2px;
+}
