--- a/css/topstyle.css
+++ b/css/topstyle.css
@@ -128,13 +128,14 @@ p{
 #top video {
   position: absolute;
   top: 0;
-  left: 0;
-
-width: 100%;
+  left: -50%;
+	right: -50%;
   min-height: 100%;
 
   background-size: cover;
   z-index: -1;
+	margin: auto;
+
 }
 
 
