--- a/css/topstyle.css
+++ b/css/topstyle.css
@@ -128,10 +128,9 @@ p{
 #top video {
   position: absolute;
   top: 0;
-  left: -50%;
-	right: -50%;
+  left: 0;
   min-height: 100%;
-
+	min-width: 100%;
   background-size: cover;
   z-index: -1;
 	margin: auto;
