--- a/css/topstyle.css
+++ b/css/topstyle.css
@@ -313,6 +313,14 @@ margin: 0 20px;
 	 padding-top: 40px;
 	 padding-left: 20px;
  }
+ .aboutTexts_sp{
+	 color: white;
+	 width:90%;
+	 display: inline-block;
+	 padding-top: 23px;
+	 padding-left: 20px;
+	 display: none;
+ }
  .aboutTexts h3{
 	 font-size: 21px;
 	 letter-spacing: 3px;
@@ -323,12 +331,22 @@ margin: 0 20px;
 	 margin-bottom: 10px;
 	 line-height: 18px;
  }
+ .aboutTexts_sp h3{
+	 font-size: 21px;
+	 letter-spacing: 3px;
+	 padding-bottom: 20px;
+   line-height: 25px;
+ }
+ .aboutTexts_sp p{
+	 margin-bottom: 10px;
+	 line-height: 18px;
+ }
  .twbtn{
 	 color: #43adc5;
 	 display: inline-block;
 	 padding:7px 25px;
 	 border-width:medium;
-	 margin: 5px 30px;
+	 margin: 15px 10px;
 	 font-size: 18px;
 	 letter-spacing: 3px;
 	 text-decoration: none;
@@ -629,4 +647,38 @@ line-height: 20px;
   padding:30px 0px 30px 0px;
   display: inline-block;
   letter-spacing: 2px;
+}
+
+
+
+@media screen and (max-width:767px) {
+/*スマホ用のcssを記述*/
+.frame {
+	width:92%;
+}
+#news .frame .newsframes{
+	 width: 92%;
+	 margin: 30px auto 10px auto;
+ }
+.tile{
+	width:100%;
+}
+.aboutPhoto{
+	width: 45%;
+}
+.kiyoPhoto{
+	margin-right: 5%;
+}
+.aboutTexts{
+	display: none;
+}
+.aboutTexts_sp{
+	display: block;
+}
+.twbtn{
+	font-size: 14px;
+}
+#news .title{
+	font-size: 14px;
+}
 }
