--- a/css/topstyle.css
+++ b/css/topstyle.css
@@ -118,6 +118,26 @@ p{
 	width:300px;
 	margin-bottom: 100px;
 }
+
+.loading {
+	width: 100%;
+	height: 100%;
+	background: rgba(255,255,255,1.0);
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 20000;
+}
+
+.loading img {
+	width: 150px;
+
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-top: -75px;
+	margin-left: -75px;
+}
  /*トップ*/
 #top{
    /*background-color: blue;*/
@@ -439,12 +459,7 @@ footer{
 	padding-top: 5px;
 	padding-bottom: 20px;
 }
-.footList li{
-	font-size: 15px;
-	line-height: 35px;
-	float: right;
-	margin-right: 35px;
-}
+
 .footLogo .logo{
 	width:13%;
 	margin-top: 30px;
@@ -651,8 +666,73 @@ line-height: 20px;
 
 
 
-@media screen and (max-width:767px) {
-/*スマホ用のcssを記述*/
+@media screen and (max-width:600px) {
+/*スマホ小用のcssを記述*/
+#top .logo{
+	width:70%;
+}
+#top .copy{
+	width: 85%;
+}
+.frame {
+	width:97%;
+}
+#news .frame .newsframes{
+	 width: 90%;
+	 margin: 20px auto 10px auto;
+ }
+.tile{
+	width:100%;
+}
+.aboutPhoto{
+	width: 45%;
+}
+.kiyoPhoto{
+	margin-right: 5%;
+}
+.aboutTexts{
+	display: none;
+}
+.aboutTexts_sp{
+	display: block;
+}
+.twbtn{
+	font-size: 14px;
+	margin: 7px 10px;
+}
+#news .title{
+	font-size: 14px;
+}
+.footLogo .logo{
+	width:100px;
+	margin-left: 20px;
+}
+.footList li{
+	font-size: 15px;
+	line-height: 35px;
+	float: left;
+	margin-left: 20px;
+}
+.news_icon{
+	height: 33px;
+	padding: 0px 0px 0px 6px;
+}
+#news .date{
+	display: none;
+}
+#exlist .date{
+	display: none;
+}
+#exlist .frame{
+	width:92%;
+}
+#product .frame{
+	width:90%;
+}
+}
+
+@media screen and (max-width:1100px) and (min-width:601px){
+/*スマホ大用のcssを記述*/
 .frame {
 	width:92%;
 }
@@ -661,7 +741,7 @@ line-height: 20px;
 	 margin: 30px auto 10px auto;
  }
 .tile{
-	width:100%;
+	width:50%;
 }
 .aboutPhoto{
 	width: 45%;
@@ -681,4 +761,29 @@ line-height: 20px;
 #news .title{
 	font-size: 14px;
 }
+.footLogo .logo{
+	width:100px;
+}
+.footList li{
+	font-size: 15px;
+	line-height: 35px;
+	float: right;
+	margin-right: 35px;
+}
+#exlist .frame{
+	width:85%;
+}
+#product .frame{
+	width:80%;
+}
+}
+
+@media screen and (min-width:1101px){
+.footList li{
+	font-size: 15px;
+	line-height: 35px;
+	float: right;
+	margin-right: 35px;
+}
+
 }
